# ModulesDispatcher

./: .gitmodules  CMakeLists.txt  README.md  bootstrap.sh  config.json
docs/: USAGE.md
example/: main.cpp
example/modules/: PrinterModule.hpp  TimerModule.hpp
example/modules/CompiledModule/: TestModule.cpp  TestModule.hpp
include/: EventChannel.hpp  EventLoop.hpp  IModule.hpp  ModuleDispatcher.hpp  ModuleInfo.hpp
include/ModuleDispatcher/: IModule.hpp
